# CoralGemm

./: CMakeLists.txt  Makefile  README.md  install.sh  run_dgemm_16GB.sh  run_dgemm_32GB.sh  run_dgemm_64GB.sh  run_sgemm_16GB.sh  run_sgemm_32GB.sh  run_sgemm_64GB.sh
doc/doxygen/: Doxyfile
src/: BaseBatchArray.cpp  BaseBatchArray.h  BaseBatchArray.hip.cpp  BatchArray.h  BatchArray.hip.cpp  BatchedGemm.cpp  BatchedGemm.h  BatchedGemm.hip.cpp  CommandLine.h  DeviceBatchArray.h  DeviceBatchedGemm.cpp  DeviceBatchedGemm.h  DeviceBatchedGemm.hip.cpp  Exception.h  FloatTypes.h  HostBatchArray.h  Makefile  Makefile.sweep  TypeConstant.h  gemm.cpp  hip2cuda.h  hipblas2cublas.h  hipblaspp.h  hiprand2curand.h  hiprandpp.h  hiprandpp.hip.cpp  sweep.cpp
src/sweep/: Makefile  sweep.cpp
